# genesis-engine

./: .env.example  .gitignore  DESIGN.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt
genesis/: __init__.py
genesis/adapters/: __init__.py  agentsystem.py  base.py
genesis/api/: __init__.py  app.py  dependencies.py  routes.py
genesis/cli/: __init__.py  main.py
genesis/deployment/: __init__.py  guides.py
genesis/eval/: __init__.py  runner.py
genesis/feedback/: __init__.py  collector.py
genesis/knowledge/: __init__.py  store.py
genesis/llm/: __init__.py  anthropic.py  multi_model.py  openai.py  provider.py
genesis/models/: __init__.py  agent.py  build.py  project.py  test_results.py
genesis/observability/: __init__.py  cost.py  telemetry.py
genesis/orchestrator/: __init__.py  deploy_finalize.py  state_machine.py
genesis/pipeline/: __init__.py  analyze.py  architect.py  build.py  deploy.py  test.py  validate_tools.py  verify.py
genesis/runtime/: __init__.py  sandbox.py
genesis/sdk/: __init__.py  client.py
genesis/security/: __init__.py  auth.py  rate_limit.py  secrets.py
genesis/storage/: __init__.py  database.py  repository.py
genesis/templates/: __init__.py  gallery.py
genesis/tools/: __init__.py  catalog.py  mcp_client.py  search.py
genesis/ui/: docs.html  index.html
tests/: conftest.py
tests/test_api/: test_p4_routes.py  test_p5_routes.py
tests/test_eval/: test_eval_runner.py
tests/test_knowledge/: test_store.py
tests/test_llm/: test_multi_model.py
tests/test_models/: test_agent.py  (+3 more)
(+17 files in other folders)
